--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         sizes="100vw"
       />
 
-      <!-- Fallback image if picture or srcset is not supported -->
+      
       <img
-        src="images/landscape-960.jpg"
+        src="images/museum.jpg"
         alt="Museum gallery room with framed paintings on the walls"
       />
     </picture>
